force-app/main/default/objects/Riesgos_OACI__c/Riesgos_OACI__c.object-meta.xml
<CustomObject>
    <label>Riesgo OACI</label>
    <nameField>
        <label>Nombre de Riesgo OACI</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Riesgos OACI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>