force-app/main/default/objects/Riesgos_OACI__c/fields/Codigo_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Contrato__c</fullName>
    <formula>Contrato__r.Codigo_SAP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Contrato</label>
    <type>Text</type>
</CustomField>