force-app/main/default/objects/Riesgos_OACI__c/fields/Codigo_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Proyecto__c</fullName>
    <formula>Contrato__r.Proyecto__r.Codigo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Proyecto</label>
    <type>Text</type>
</CustomField>