force-app/main/default/objects/Riesgos_OACI__c/fields/Nombre_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Proyecto__c</fullName>
    <formula>Contrato__r.Proyecto__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Proyecto</label>
    <type>Text</type>
</CustomField>