force-app/main/default/objects/Riesgos_OACI__c/fields/Riesgos_detalle__c.field-meta.xml
<CustomField>
    <fullName>Riesgos_detalle__c</fullName>
    <label>Riesgo y Valoración</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>